# singularity-compose-rs

./: Cargo.toml  README.md  TODO.md  scompose  singularity-compose.yaml
src/: cli.rs  datatypes.rs  error.rs  main.rs  service_template.j2  utils.rs
