[package]
name = "singularity-compose-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
minijinja = "2.20.0"
serde = { version = "1.0.228", features = ["derive"] }
text_trees = "0.1.2"
thiserror = "2.0.18"
yaml_serde = "0.10.4"
