[package]
name = "singularity-compose-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
fuzzy-matcher = "0.3.7"
glob = "0.3.3"
inquire = "0.9.4"
is-root = "0.1.3"
minijinja = "2.20.0"

serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.38.4"
text_trees = "0.1.2"
thiserror = "2.0.18"
yaml_serde = "0.10.4"
